[gd_scene load_steps=13 format=3 uid="uid://c0sljw8fmhtc0"]

[ext_resource type="Script" path="res://main.gd" id="1_xpst8"]
[ext_resource type="PackedScene" uid="uid://biiv6nh0k0pum" path="res://axis.tscn" id="2_t7o2s"]
[ext_resource type="PackedScene" uid="uid://bl0p65sry0nln" path="res://character.tscn" id="3_bick0"]
[ext_resource type="PackedScene" uid="uid://clhrvu46oyrm4" path="res://point_light_2d.tscn" id="4_lgpnv"]
[ext_resource type="PackedScene" uid="uid://pqw12i2ojyfo" path="res://camera.tscn" id="5_3ccxs"]
[ext_resource type="PackedScene" uid="uid://bqmij2fhvf2sv" path="res://parallax_winter.tscn" id="6_8qge1"]
[ext_resource type="PackedScene" uid="uid://cl1ropcddlo0a" path="res://death_zone.tscn" id="7_30qca"]
[ext_resource type="FontFile" uid="uid://b03juf6hryf2c" path="res://Alef-Regular.ttf" id="8_b61bk"]
[ext_resource type="Texture2D" uid="uid://djplynk1o7f46" path="res://menuconfirm.png" id="9_ulmfa"]
[ext_resource type="Texture2D" uid="uid://d0e3u46fo3krf" path="res://1000x250white.png" id="10_er0x5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e65pr"]
size = Vector2(95, 101)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xv3jr"]
size = Vector2(99, 101)

[node name="level_4" type="Node2D"]
script = ExtResource("1_xpst8")

[node name="axis" parent="." instance=ExtResource("2_t7o2s")]
position = Vector2(500, 250)
scale = Vector2(25, 1)
metadata/_edit_lock_ = true

[node name="character" parent="." instance=ExtResource("3_bick0")]
position = Vector2(30, 159)

[node name="PointLight2D" parent="character" instance=ExtResource("4_lgpnv")]

[node name="above" type="Node2D" parent="."]
z_index = 1

[node name="below" type="Node2D" parent="."]

[node name="camera" parent="." instance=ExtResource("5_3ccxs")]
metadata/_edit_lock_ = true

[node name="parallax" parent="." instance=ExtResource("6_8qge1")]
metadata/_edit_lock_ = true

[node name="death_zone" parent="." instance=ExtResource("7_30qca")]
position = Vector2(32, 628)
scale = Vector2(50, 1)
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
process_mode = 4
modulate = Color(1, 0, 0, 1)
z_index = 7
texture_filter = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 255.0
offset_top = 124.0
offset_right = 255.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("8_b61bk")
theme_override_font_sizes/normal_font_size = 32
text = "Any saved checkpoints will be lost"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
process_mode = 4
modulate = Color(0.643137, 0.541176, 0.352941, 1)
z_index = 7
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 263.0
offset_top = 180.0
offset_right = 263.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("8_b61bk")
theme_override_font_sizes/normal_font_size = 25
text = "Are you sure you want to return to menu?"

[node name="menupopup" type="Sprite2D" parent="CanvasLayer"]
z_index = 5
position = Vector2(500, 250)
texture = ExtResource("9_ulmfa")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
modulate = Color(0, 0, 0, 1)
z_index = -2
position = Vector2(500, 250)
scale = Vector2(0.53, 1.135)
texture = ExtResource("10_er0x5")

[node name="yes" type="Area2D" parent="CanvasLayer"]
position = Vector2(500, 250)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/yes"]
position = Vector2(67.5, 52)
shape = SubResource("RectangleShape2D_e65pr")

[node name="no" type="Area2D" parent="CanvasLayer"]
position = Vector2(500, 250)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/no"]
position = Vector2(178.5, 52.5)
shape = SubResource("RectangleShape2D_xv3jr")

[connection signal="input_event" from="CanvasLayer/yes" to="." method="_on_yes_input_event"]
[connection signal="input_event" from="CanvasLayer/no" to="." method="_on_no_input_event"]
