[gd_scene load_steps=32 format=3 uid="uid://c2d6hsho2u8ui"]

[ext_resource type="Script" path="res://main.gd" id="1_jr1lh"]
[ext_resource type="Shader" path="res://water.gdshader" id="2_xooj1"]
[ext_resource type="PackedScene" uid="uid://bl0p65sry0nln" path="res://character.tscn" id="2_xquvy"]
[ext_resource type="Texture2D" uid="uid://dqpb4najivq3e" path="res://1000x250white.png" id="3_3wecm"]
[ext_resource type="PackedScene" uid="uid://biiv6nh0k0pum" path="res://axis.tscn" id="3_23kuv"]
[ext_resource type="Texture2D" uid="uid://bhqipp7kx77yt" path="res://menu.png" id="3_jturw"]
[ext_resource type="PackedScene" uid="uid://bhrou6ujbten2" path="res://obst1.tscn" id="4_72qsx"]
[ext_resource type="Script" path="res://point_light_2d.gd" id="4_fcd8y"]
[ext_resource type="PackedScene" uid="uid://pqw12i2ojyfo" path="res://camera.tscn" id="8_0s4gn"]
[ext_resource type="Texture2D" uid="uid://bni1s0npw1yhs" path="res://Summer Background - Sky.png" id="9_w63p6"]
[ext_resource type="Texture2D" uid="uid://dne8n34rhynj5" path="res://Summer Background - Distant mountains smallres.png" id="10_bgwn0"]
[ext_resource type="Texture2D" uid="uid://dv5coctnd4cku" path="res://parallaxtree.png" id="10_slfmi"]
[ext_resource type="Texture2D" uid="uid://df7eyh1drbuvd" path="res://Summer Background - Close mountains(1).png" id="11_8f74o"]
[ext_resource type="Texture2D" uid="uid://dd6e8ylc85u7a" path="res://treescene/bgtree.png" id="13_dfch6"]
[ext_resource type="Texture2D" uid="uid://dvynjev5bhw4p" path="res://treescene/distanttrees.png" id="14_jxdyp"]
[ext_resource type="Script" path="res://obst_1.gd" id="14_xc0cc"]
[ext_resource type="Texture2D" uid="uid://botrbifc1ersy" path="res://treescene/closetrees.png" id="15_r8sji"]

[sub_resource type="GDScript" id="GDScript_h4x3n"]
script/source = "extends CanvasLayer

#when a level is beaten, add it to 'unlocked_levels'

var levels = [1,2,3,4,5,6]
var unlocked_levels = [1]
var in_level = false

func _on_level_1_input_event(_viewport, event, _shape_idx):
	if in_level == false:
		$level1/PointLight2D.visible = true
		$level2/PointLight2D2.visible = false
		$level3/PointLight2D3.visible = false
		$level4/PointLight2D4.visible = false
		
		if event is InputEventMouseButton and Input.is_action_just_pressed(\"left_click\"):
			$\"../..\".create_level(1)
			in_level = true
			
func _on_level_2_input_event(_viewport, event, _shape_idx):
	if in_level == false:
		$level1/PointLight2D.visible = false
		$level2/PointLight2D2.visible = true
		$level3/PointLight2D3.visible = false
		$level4/PointLight2D4.visible = false
		if event is InputEventMouseButton and Input.is_action_just_pressed(\"left_click\"):
			$\"../..\".create_level(2)
			in_level = true
			
func _on_level_3_input_event(_viewport, event, _shape_idx):
	if in_level == false:
		$level1/PointLight2D.visible = false
		$level2/PointLight2D2.visible = false
		$level3/PointLight2D3.visible = true
		$level4/PointLight2D4.visible = false
		if event is InputEventMouseButton and Input.is_action_just_pressed(\"left_click\"):
			$\"../..\".create_level(3)
			in_level = true
			
func _on_level_4_input_event(_viewport, event, _shape_idx):
	
	if in_level == false:
		$level1/PointLight2D.visible = false
		$level2/PointLight2D2.visible = false
		$level3/PointLight2D3.visible = false
		$level4/PointLight2D4.visible = true
		if event is InputEventMouseButton and Input.is_action_just_pressed(\"left_click\"):
			$\"../..\".create_level(4)
			in_level = true
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_748be"]
size = Vector2(148, 71)

[sub_resource type="Gradient" id="Gradient_cauns"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_44hks"]
gradient = SubResource("Gradient_cauns")
fill = 1
fill_from = Vector2(0.491453, 0.495726)
fill_to = Vector2(0.92735, 0.145299)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cgw8n"]
size = Vector2(129, 92)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ly4g"]
size = Vector2(126, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqrb7"]
size = Vector2(94, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcwlu"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y62dv"]
size = Vector2(40, 40)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ld3dy"]
noise_type = 2
frequency = 0.013
fractal_type = 2
fractal_gain = 0.98
fractal_weighted_strength = 0.73

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_1rhca"]
seamless = true
seamless_blend_skirt = 0.601
noise = SubResource("FastNoiseLite_ld3dy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_37vta"]
shader = ExtResource("2_xooj1")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/speed = Vector2(0, 0.03)
shader_parameter/wave_strength = 2.3
shader_parameter/fast_noise = SubResource("NoiseTexture2D_1rhca")

[sub_resource type="Gradient" id="Gradient_ku4fk"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j2d1a"]
gradient = SubResource("Gradient_ku4fk")
width = 1400
height = 250

[node name="main" type="Node2D"]
script = ExtResource("1_jr1lh")

[node name="default_node" type="Node2D" parent="."]

[node name="menu" type="CanvasLayer" parent="default_node"]
process_priority = 1
script = SubResource("GDScript_h4x3n")

[node name="Sprite2D" type="Sprite2D" parent="default_node/menu"]
z_index = 6
texture_filter = 1
position = Vector2(500, 250)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_jturw")

[node name="level1" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level1"]
position = Vector2(227, 86.5)
shape = SubResource("RectangleShape2D_748be")

[node name="PointLight2D" type="PointLight2D" parent="default_node/menu/level1"]
visible = false
z_index = 2
position = Vector2(230.5, 88)
scale = Vector2(2.10938, 1)
energy = 1.5
range_layer_max = 4
texture = SubResource("GradientTexture2D_44hks")

[node name="level2" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level2"]
position = Vector2(492.5, 166)
shape = SubResource("RectangleShape2D_cgw8n")

[node name="PointLight2D2" type="PointLight2D" parent="default_node/menu/level2"]
visible = false
z_index = 2
position = Vector2(490, 165.5)
scale = Vector2(1.9375, 1.45312)
energy = 1.5
range_layer_max = 4
texture = SubResource("GradientTexture2D_44hks")

[node name="level3" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level3"]
position = Vector2(788, 107)
shape = SubResource("RectangleShape2D_8ly4g")

[node name="PointLight2D3" type="PointLight2D" parent="default_node/menu/level3"]
visible = false
z_index = 2
position = Vector2(789.5, 106)
scale = Vector2(1.95313, 1)
energy = 1.5
range_layer_max = 4
texture = SubResource("GradientTexture2D_44hks")

[node name="level4" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level4"]
position = Vector2(767, 344.5)
shape = SubResource("RectangleShape2D_fqrb7")

[node name="PointLight2D4" type="PointLight2D" parent="default_node/menu/level4"]
visible = false
z_index = 2
position = Vector2(766, 345)
scale = Vector2(1.75, 1.25)
energy = 1.5
range_layer_max = 4
texture = SubResource("GradientTexture2D_44hks")

[node name="level5" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level5"]
position = Vector2(726, 155)
shape = SubResource("RectangleShape2D_vcwlu")

[node name="level6" type="Area2D" parent="default_node/menu"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="default_node/menu/level6"]
position = Vector2(845, 303)
shape = SubResource("RectangleShape2D_y62dv")

[node name="shader" type="Sprite2D" parent="default_node/menu"]
visible = false
z_index = 6
material = SubResource("ShaderMaterial_37vta")
position = Vector2(500, 375)
texture = ExtResource("3_3wecm")

[node name="axis" parent="default_node" instance=ExtResource("3_23kuv")]
position = Vector2(500, 250)

[node name="character" parent="default_node" node_paths=PackedStringArray("axis") instance=ExtResource("2_xquvy")]
z_index = 3
position = Vector2(134, -1)
axis = NodePath("../axis")

[node name="PointLight2D" type="PointLight2D" parent="default_node/character"]
z_index = 4
position = Vector2(0, -23)
energy = 0.0
range_z_min = 1
range_z_max = 1
texture = SubResource("GradientTexture2D_j2d1a")
script = ExtResource("4_fcd8y")

[node name="Marker2D" type="Marker2D" parent="default_node"]
position = Vector2(577, 54)
metadata/_edit_lock_ = true

[node name="camera" parent="default_node" instance=ExtResource("8_0s4gn")]
position_smoothing_enabled = true

[node name="levels" type="Node2D" parent="."]

[node name="level_1" type="Node2D" parent="levels"]

[node name="above" type="Node2D" parent="levels/level_1"]
z_index = 1

[node name="obst1" parent="levels/level_1/above" instance=ExtResource("4_72qsx")]
position = Vector2(135, 220)

[node name="obst2" parent="levels/level_1/above" instance=ExtResource("4_72qsx")]
position = Vector2(385, 225)
rotation = 0.71733
scale = Vector2(1.16, 1.16)

[node name="obst3" parent="levels/level_1/above" instance=ExtResource("4_72qsx")]
position = Vector2(504, 242)

[node name="obst4" parent="levels/level_1/above" instance=ExtResource("4_72qsx")]
position = Vector2(672, 144)

[node name="below" type="Node2D" parent="levels/level_1"]
z_index = -1

[node name="parallax" type="Node2D" parent="levels/level_1"]

[node name="parallaxbelow" type="Node2D" parent="levels/level_1/parallax"]
z_index = -2

[node name="sky" type="Parallax2D" parent="levels/level_1/parallax/parallaxbelow"]
scroll_scale = Vector2(0, 0)

[node name="below" type="Sprite2D" parent="levels/level_1/parallax/parallaxbelow/sky"]
z_index = -1
position = Vector2(0, 500)
scale = Vector2(0.261, -0.231)
texture = ExtResource("9_w63p6")
centered = false

[node name="farmountains" type="Parallax2D" parent="levels/level_1/parallax/parallaxbelow"]
scroll_scale = Vector2(0.15, 0.15)
repeat_size = Vector2(1000, 0)

[node name="below" type="Sprite2D" parent="levels/level_1/parallax/parallaxbelow/farmountains"]
modulate = Color(1, 0.913725, 0.843137, 1)
z_index = -1
texture_filter = 1
position = Vector2(500, 375)
scale = Vector2(0.5, -0.5)
texture = ExtResource("10_bgwn0")

[node name="closermountains" type="Parallax2D" parent="levels/level_1/parallax/parallaxbelow"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(1000, 0)

[node name="below" type="Sprite2D" parent="levels/level_1/parallax/parallaxbelow/closermountains"]
z_index = -1
texture_filter = 1
position = Vector2(500, 375)
scale = Vector2(0.261, -0.261)
texture = ExtResource("11_8f74o")

[node name="parallaxabove" type="Node2D" parent="levels/level_1/parallax"]
z_index = -1

[node name="sky" type="Parallax2D" parent="levels/level_1/parallax/parallaxabove"]
scroll_scale = Vector2(0, 0)

[node name="above" type="Sprite2D" parent="levels/level_1/parallax/parallaxabove/sky"]
position = Vector2(-5.96046e-08, -1)
scale = Vector2(0.261, 0.231)
texture = ExtResource("9_w63p6")
centered = false

[node name="farmountains" type="Parallax2D" parent="levels/level_1/parallax/parallaxabove"]
scroll_scale = Vector2(0.15, 0.15)
repeat_size = Vector2(1000, 0)

[node name="above" type="Sprite2D" parent="levels/level_1/parallax/parallaxabove/farmountains"]
texture_filter = 1
position = Vector2(500, 125)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_bgwn0")

[node name="closermountains" type="Parallax2D" parent="levels/level_1/parallax/parallaxabove"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(1000, 0)

[node name="above" type="Sprite2D" parent="levels/level_1/parallax/parallaxabove/closermountains"]
texture_filter = 1
position = Vector2(500, 125)
scale = Vector2(0.261, 0.261)
texture = ExtResource("11_8f74o")

[node name="level_2" type="Node2D" parent="levels"]

[node name="above" type="Node2D" parent="levels/level_2"]
z_index = 1

[node name="obst2" parent="levels/level_2/above" instance=ExtResource("4_72qsx")]
position = Vector2(418, 154)
scale = Vector2(34.87, 1)
script = ExtResource("14_xc0cc")

[node name="obst3" parent="levels/level_2/above" instance=ExtResource("4_72qsx")]
position = Vector2(527, 158)
scale = Vector2(45.79, 1)

[node name="below" type="Node2D" parent="levels/level_2"]
z_index = -1

[node name="parallax" type="Node2D" parent="levels/level_2"]

[node name="parallaxbelow" type="Node2D" parent="levels/level_2/parallax"]
z_index = -2

[node name="sky" type="Parallax2D" parent="levels/level_2/parallax/parallaxbelow"]
scroll_scale = Vector2(0, 0)

[node name="below" type="Sprite2D" parent="levels/level_2/parallax/parallaxbelow/sky"]
z_index = -1
position = Vector2(1, 504)
scale = Vector2(0.5, -0.5)
texture = ExtResource("13_dfch6")
centered = false

[node name="farmountains" type="Parallax2D" parent="levels/level_2/parallax/parallaxbelow"]
scroll_scale = Vector2(0.15, 0.15)
repeat_size = Vector2(1000, 0)

[node name="below" type="Sprite2D" parent="levels/level_2/parallax/parallaxbelow/farmountains"]
modulate = Color(1, 0.913725, 0.843137, 1)
z_index = -1
texture_filter = 1
position = Vector2(500, 375)
scale = Vector2(0.5, -0.5)
texture = ExtResource("14_jxdyp")

[node name="closermountains" type="Parallax2D" parent="levels/level_2/parallax/parallaxbelow"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(1000, 0)

[node name="below" type="Sprite2D" parent="levels/level_2/parallax/parallaxbelow/closermountains"]
z_index = -1
texture_filter = 1
position = Vector2(500, 375)
scale = Vector2(0.5, -0.5)
texture = ExtResource("15_r8sji")

[node name="Parallax2D" type="Parallax2D" parent="levels/level_2/parallax/parallaxbelow"]
scroll_scale = Vector2(4, 4)
scroll_offset = Vector2(2, 0)
repeat_size = Vector2(800, 0)

[node name="Sprite2D" type="Sprite2D" parent="levels/level_2/parallax/parallaxbelow/Parallax2D"]
visible = false
z_index = 5
position = Vector2(302, 254)
texture = ExtResource("10_slfmi")

[node name="parallaxabove" type="Node2D" parent="levels/level_2/parallax"]
z_index = -1

[node name="sky" type="Parallax2D" parent="levels/level_2/parallax/parallaxabove"]
scroll_scale = Vector2(0, 0)

[node name="above" type="Sprite2D" parent="levels/level_2/parallax/parallaxabove/sky"]
position = Vector2(-1, -1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_dfch6")
centered = false

[node name="farmountains" type="Parallax2D" parent="levels/level_2/parallax/parallaxabove"]
scroll_scale = Vector2(0.15, 0.15)
repeat_size = Vector2(1000, 0)

[node name="above" type="Sprite2D" parent="levels/level_2/parallax/parallaxabove/farmountains"]
texture_filter = 1
position = Vector2(500, 125)
scale = Vector2(0.5, 0.5)
texture = ExtResource("14_jxdyp")

[node name="closermountains" type="Parallax2D" parent="levels/level_2/parallax/parallaxabove"]
scroll_scale = Vector2(0.3, 0.3)
repeat_size = Vector2(1000, 0)

[node name="above" type="Sprite2D" parent="levels/level_2/parallax/parallaxabove/closermountains"]
texture_filter = 1
position = Vector2(500, 125)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_r8sji")

[node name="level_3" type="Node2D" parent="levels"]

[node name="above" type="Node2D" parent="levels/level_3"]
z_index = 1

[node name="obst1" parent="levels/level_3/above" instance=ExtResource("4_72qsx")]
position = Vector2(135, 220)

[node name="obst2" parent="levels/level_3/above" instance=ExtResource("4_72qsx")]
position = Vector2(385, 225)
rotation = 0.71733
scale = Vector2(1.16, 1.16)

[node name="obst3" parent="levels/level_3/above" instance=ExtResource("4_72qsx")]
position = Vector2(504, 242)

[node name="obst4" parent="levels/level_3/above" instance=ExtResource("4_72qsx")]
position = Vector2(672, 144)

[node name="below" type="Node2D" parent="levels/level_3"]
z_index = -1

[node name="level_4" type="Node2D" parent="levels"]

[node name="above" type="Node2D" parent="levels/level_4"]
z_index = 1

[node name="obst1" parent="levels/level_4/above" instance=ExtResource("4_72qsx")]
position = Vector2(135, 220)

[node name="obst2" parent="levels/level_4/above" instance=ExtResource("4_72qsx")]
position = Vector2(385, 225)
rotation = 0.71733
scale = Vector2(1.16, 1.16)

[node name="obst3" parent="levels/level_4/above" instance=ExtResource("4_72qsx")]
position = Vector2(504, 242)

[node name="obst4" parent="levels/level_4/above" instance=ExtResource("4_72qsx")]
position = Vector2(672, 144)

[node name="below" type="Node2D" parent="levels/level_4"]
z_index = -1

[connection signal="input_event" from="default_node/menu/level1" to="default_node/menu" method="_on_level_1_input_event"]
[connection signal="input_event" from="default_node/menu/level2" to="default_node/menu" method="_on_level_2_input_event"]
[connection signal="input_event" from="default_node/menu/level3" to="default_node/menu" method="_on_level_3_input_event"]
[connection signal="input_event" from="default_node/menu/level4" to="default_node/menu" method="_on_level_4_input_event"]
[connection signal="input_event" from="default_node/menu/level5" to="default_node/menu" method="_on_level_5_input_event"]
[connection signal="input_event" from="default_node/menu/level6" to="default_node/menu" method="_on_level_6_input_event"]
